reference to jQuery in index.html

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
        <font color="red" size="15px">Winner!</font></blink2></b>
 
 </div>
+<script src="vendor/jquery-1.11.0.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
