--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="css/app.css"></head>
 <body>
 
-<div id="log"></div><br>
+<div id="debug_log"></div><br>
 <div id="log2"></div>
 <table id="t">
     <tr>
