--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="../qunit/qunit.css">
 	<script src="../qunit/qunit.js"></script>
 	<script src="test.js"></script>
+	<script src="../vendor/jquery-1.11.0.js"></script>
+	<script src="../vendor/watch.js"></script>
 	<script src="../app.js"></script>
 </head>
 <body>
