--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
 </div>
 <script src="vendor/jquery-1.11.0.js"></script>
+<script src="vendor/watch.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
