Find and map cells with data-row and data-column

--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
         <td>
             <table id="s1">
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="0" data-column="0"></td>
+                    <td class="cell" data-row="0" data-column="1"></td>
+                    <td class="cell" data-row="0" data-column="2"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="1" data-column="0"></td>
+                    <td class="cell" data-row="1" data-column="1"></td>
+                    <td class="cell" data-row="1" data-column="2"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="2" data-column="0"></td>
+                    <td class="cell" data-row="2" data-column="1"></td>
+                    <td class="cell" data-row="2" data-column="2"></td>
                 </tr>
             </table>
         </td>
         <td>
             <table id="s2">
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="0" data-column="3"></td>
+                    <td class="cell" data-row="0" data-column="4"></td>
+                    <td class="cell" data-row="0" data-column="5"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="1" data-column="3"></td>
+                    <td class="cell" data-row="1" data-column="4"></td>
+                    <td class="cell" data-row="1" data-column="5"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="2" data-column="3"></td>
+                    <td class="cell" data-row="2" data-column="4"></td>
+                    <td class="cell" data-row="2" data-column="5"></td>
                 </tr>
             </table>
         </td>
@@ -72,38 +72,38 @@
         <td>
             <table id="s3">
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="3" data-column="0"></td>
+                    <td class="cell" data-row="3" data-column="1"></td>
+                    <td class="cell" data-row="3" data-column="2"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="4" data-column="0"></td>
+                    <td class="cell" data-row="4" data-column="1"></td>
+                    <td class="cell" data-row="4" data-column="2"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="5" data-column="0"></td>
+                    <td class="cell" data-row="5" data-column="1"></td>
+                    <td class="cell" data-row="5" data-column="2"></td>
                 </tr>
             </table>
         </td>
         <td>
             <table id="s4">
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="3" data-column="3"></td>
+                    <td class="cell" data-row="3" data-column="4"></td>
+                    <td class="cell" data-row="3" data-column="5"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="4" data-column="3"></td>
+                    <td class="cell" data-row="4" data-column="4"></td>
+                    <td class="cell" data-row="4" data-column="5"></td>
                 </tr>
                 <tr>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
-                    <td class="cell"></td>
+                    <td class="cell" data-row="5" data-column="3"></td>
+                    <td class="cell" data-row="5" data-column="4"></td>
+                    <td class="cell" data-row="5" data-column="5"></td>
                 </tr>
             </table>
         </td>
